Jacksum 3.6.0, TBD

- new algorithms:
  - added Ascon family hashes called ascon-hash, ascon-hasha, ascon-xof, and ascon-xofa - Ascon is the winner of the
    NIST Lightweight Cryptography competition (2019–2023)
  - added blake2sp, and blake2bp - fixed width single threaded Java implementations by bouncy castle (pre-release) with
    a buffer fix by jonelo to avoid an ArrayIndexOutOfBoundsException at System.arraycopy for particular message
    lengths, e.g. 1007 bytes.
  - alternate implementation for blake3 provided by bouncy castle, the existing primary implementation still remains the
    primary, because it is slightly faster.

- bug fixes:
  - CommonHashStatistics.java was not added to the repo which avoided the compilation


Jacksum 3.5.0, Jan 7, 2023

- new algorithms:
  - replaced own CRC engine by the BSD 3-clause licenced CRC engine java-crc 1.0.3 from S&K Software Development Ltd.,
    New Zealand (https://github.com/snksoft/java-crc) in order to benefit from the extra [1..7] CRC bit widths.
  - added CRC-82/DARC with aliases crc82, crc82_darc, crc-82, crc-82_darc
    (translated to Java from C-code that was written by Mark Adler)
  - added PHP's variants on Tiger called "tiger192,4", "tiger160,4", and "tiger128,4"
    by adjusting Bouncy Castle's TigerDigest slightly.
  - added legacy sum64

- new features:
  - make option --file-list recognizing GNU filename escaping
  - added "files-only" style with GNU filename escaping feature enabled in order to generate file lists
    that can be fed to Jacksum again
  - added "hexhashes-only" style to read and write files that contain hash values only (for -w)
  - added option alias called --match-filter for option --wanted-list-filter
  - added option alias called --expect for option --expect-hash
  - improved --info for CRCs:
    - added the polynomial representations: normal, reversed, and Koopman
    - added the reciprocal polynomial for CRCs
    - added binary and hex for each poly representation